--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "mjmlhelper.js",
   "dependencies": {
-    "archiver": "^2.1.1",
-    "fs-extra": "^5.0.0",
+    "archiver": "^3.0.0",
+    "fs-extra": "^8.0.1",
     "ftp": "^0.3.10",
-    "mjml": "^4.0.5",
-    "nodemailer": "^4.6.4",
-    "npm": "^6.0.0"
+    "mjml": "^4.4.0-beta.2",
+    "nodemailer": "^6.2.1",
+    "npm": "^6.9.0"
   },
   "devDependencies": {},
   "scripts": {
