--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "mjmlhelper",
-  "version": "1.8.4",
+  "version": "1.8.5",
   "description": "",
   "main": "mjmlhelper.js",
   "dependencies": {
-    "archiver": "^3.0.0",
-    "fs-extra": "^8.0.1",
+    "archiver": "^3.1.1",
+    "fs-extra": "^8.1.0",
     "ftp": "^0.3.10",
-    "mjml": "^4.4.0-beta.2",
-    "nodemailer": "^6.2.1",
-    "npm": "^6.9.0"
+    "mjml": "^4.5.1",
+    "nodemailer": "^6.3.1",
+    "npm": "^6.12.0"
   },
   "devDependencies": {},
   "scripts": {
