--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "mjmlhelper",
-  "version": "1.8.8",
+  "version": "1.8.9",
   "description": "",
   "main": "mjmlhelper.js",
   "dependencies": {
     "archiver": "^3.1.1",
+    "cli-error-notifier": "^2.1.0",
     "fs-extra": "^8.1.0",
     "ftp": "^0.3.10",
     "jsdom": "^15.2.0",
     "mjml": "^4.5.1",
     "nodemailer": "^6.3.1",
-    "npm": "^6.12.0"
+    "npm": "^6.12.0",
+    "onchange": "^6.1.0"
   },
   "devDependencies": {},
   "scripts": {
